--- a/Lab1/01_gdut/hometown.html
+++ b/Lab1/01_gdut/hometown.html
@@ -6,7 +6,7 @@
     <!-- 倒计时5s跳转至广东工业大学主页 -->
     <meta http-equiv="refresh" content="5;url=https://www.gdut.edu.cn/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="tom.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>理塘</title>
 
     <style>
