--- a/Lab1/02_bugair/index.html
+++ b/Lab1/02_bugair/index.html
@@ -31,7 +31,7 @@
 <!--         <div class="text"><a href="#">下一页更精彩</a></div> -->
     </div>
     
-    <div class="link-a container"><a href="#">下一页更精彩</a></div>
+    <div class="link-a container"><a href="../03_nextpage/nextpage.html">下一页更精彩</a></div>
 
 </body>
 </html>
