--- a/Lab3/pages/music.html
+++ b/Lab3/pages/music.html
@@ -7,6 +7,7 @@
     <title>共鸣未来</title>
 
     <link rel="stylesheet" href="../css/color.css">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
     
